--- a/sass/components/_story.scss
+++ b/sass/components/_story.scss
@@ -18,14 +18,47 @@
         shape-outside: circle(50% at 50% 50%);
         -webkit-clip-path:circle(50% at 50% 50%);
         clip-path:circle(50% at 50% 50%); /*em floats é preferível usar isto em vez de margens*/
-        transform:translateX(-3rem) skewX(12deg);; 
+        transform:translateX(-3rem) skewX(12deg);
+        position: relative;
     }
 
     &__image{
         height:100%;
+        transform:translate(-4rem) scale(1.4);
+        backface-visibility: hidden;
+        transition: all .5s;
+
     }
 
     &__text{
         transform: skewX(12deg);
+    }
+
+    &__caption{
+        position: absolute;
+        top:50%;
+        left:50%;
+        color:$color-white;
+        transform:translate(-50%, 20%);
+        text-transform: uppercase;
+        font-size: 1.7rem;
+        text-align: center;
+        opacity:0;
+        transition: all .5s;
+        backface-visibility: hidden;/*suposto melhorar um bug que desloca o texto para a direita, 
+        mas que no meu broser parece ser a causa*/
+
+    }
+
+    &:hover &__caption{
+        opacity: 1;
+        transform: translate(-50%, -50%);
+    }
+
+    &:hover &__image{
+        transform:translate(-4rem) scale(1);
+        filter: blur(3px) brightness(80%);
+        
+
     }
 }
