--- a/sass/main.scss
+++ b/sass/main.scss
@@ -9,6 +9,7 @@
 
 @import "components/feature-box";
 @import "components/button";
+@import "components/bg-video";
 @import "components/card";
 @import "components/composition";
 @import "components/story";
