--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -26,7 +26,7 @@
     }
 
 .section-stories{
+    position: relative;
     padding: 15rem 0;
-    background-color: $color-gray-light-1;
     
 }    
