--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -12,6 +12,7 @@ $color-tertiary-dark:#5643fa;
 
 $color-gray-light-1:#f7f7f7;
 $color-gray: #777;
+$color-gray-dark-2: #999;
 $color-gray-dark:rgb(100, 100, 108);
 $color-gray-light-2:#eee;
 
