--- a/sass/main.scss
+++ b/sass/main.scss
@@ -11,6 +11,7 @@
 @import "components/button";
 @import "components/bg-video";
 @import "components/card";
+@import "components/form";
 @import "components/composition";
 @import "components/story";
 
