--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -15,6 +15,8 @@ $color-gray: #777;
 $color-gray-dark-2: #999;
 $color-gray-dark:rgb(100, 100, 108);
 $color-gray-light-2:#eee;
+$color-gray-light-3:#333;
+
 
 $color-black:#000;
 $color-white:#fff;
